# GAN-mxnet

./: .gitignore  IO.py  Makefile  README.md  TODO  clear.sh  config.py  discriminator.py  generator.py  loss.py  plot.py  train.py  try.py
CGAN/: test.py  train.py
CGAN/core/: DataIter.py  config.py  modules.py  visualize.py
CGAN/symbols/: discriminator.py  generator.py  loss.py
cffi/: cffi_build.py  clib.cpp  clib.h  try.c  try.py
core/: DataIter.py  IO.py  config.py  meric.py  module.py  visualize.py
mnist/: CMakeLists.txt  get_mnist.sh  main.cpp
symbol/: discriminator.py  generator.py  loss.py
